--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
   </head>
   <body>
     <h1>THIS IS JUST RANDOM SIET</h1>
-    <img src="images/logogost.png" alt="logogost">
+    <img src="images/depositphotos_65076917-stock-photo-hacker-and-terrorism-fight.jpg" alt="logogost">
 
-    <p>THERE IS SOME blah..blah..blah....blah..blah..blah....blah..blah..blah....
-blah..blah..blah....blah..blah..blah.. LETS reed ittttt</p>
+    <p>THERE IS SOME blah..blah..blah....blah..blah..blah....blah..blah..blah....blah..blah..blah....blah..blah..blah.. LETS reed ittttt</p>
 
     <ul> <!-- changed to list in the tutorial -->
       <li>like</li>
