--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@ click “more” then “special”
 select “paragraph mark” (top of the list)
 click into the “replace with” field.</p>
 
-    <p>gooo loooop here <a href="https://gc8net.github.io/mynewsamplesite/">click here</a> and go as looooooper</p>
+    <p>gooo loooop here <a href="https://gc8net.github.io/mynewsamplesite"  target="_blank">click here</a></p> and go as looooooper
   </body>
 </html>
