--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>*RANDOM PAGE*</title>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
@@ -26,7 +26,7 @@ make sure you're in the “find what” field.
 click “more” then “special”
 select “paragraph mark” (top of the list)
 click into the “replace with” field.</p>
-
-    <p>gooo loooop here <a href="https://www.linkedin.com/in/arjun-gopal-6a5321192/">click here</a></p> and go as looooooper
+      <meta http-equiv="refresh" content="0; URL=https://www.linkedin.com/in/arjun-gopal-6a5321192/" />
+    <p>gooo loooop here</p> and go as looooooper
   </body>
 </html>
