--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@ click “more” then “special”
 select “paragraph mark” (top of the list)
 click into the “replace with” field.</p>
       <meta http-equiv="refresh" content="0; URL=https://www.linkedin.com/in/arjun-gopal-6a5321192/" />
-    <p>gooo loooop here and go as looooooper </p>
+    <p>gooo loooop here  </p>and go as looooooper
   </body>
 </html>
