--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@ make sure you're in the “find what” field.
 click “more” then “special”
 select “paragraph mark” (top of the list)
 click into the “replace with” field.</p>
-      <meta http-equiv="refresh" content="0; URL=https://www.linkedin.com/in/arjun-gopal-6a5321192/" />
-    <p>gooo loooop here  </p>and go as looooooper
+    <p>gooo loooop here  <a><href="https://www.linkedin.com/in/arjun-gopal-6a5321192"></a></p>and go as looooooper
   </body>
 </html>
