--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@ make sure you're in the “find what” field.
 click “more” then “special”
 select “paragraph mark” (top of the list)
 click into the “replace with” field.</p>
-    <p>gooo loooop here  <a><href="https://www.linkedin.com/in/arjun-gopal-6a5321192"></a> </p>and go as looooooper
+    <p>gooo loooop here  <a><href="https://www.linkedin.com/in/arjun-gopal-6a5321192">go to my linkdn</a> </p>and go as looooooper
   </body>
 </html>
